Modify the code to make it compile successfully in Android Studio.